All remaining user tests run in i18n-specific proj