@@ -23,6 +23,21 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>compiler</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <classifier>tests</classifier>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>junit3</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
@@ -57,6 +72,8 @@
           <dependenciesToScan>
             <dependency>${project.groupId}:i18n-int-test:test-jar</dependency>
           </dependenciesToScan>
+          <!-- allow mockito to work with java 9+ -->
+          <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
     </plugins>
